# durability

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_checkpoint.rs  bench_recordlog.rs  bench_recover.rs  bench_walog.rs
examples/: segment_lifecycle.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_checkpoint_read.rs  fuzz_recordlog_read.rs  fuzz_wal_dir_replay.rs  fuzz_wal_entry_decode.rs
src/: checkpoint.rs  checkpointing.rs  error.rs  formats.rs  lib.rs  publish.rs  recordlog.rs  recover.rs  replay.rs  storage.rs  walog.rs
tests/: crashloop_publish_powerloss.rs  e2e_checkpoint_wal_recovery.rs  e2e_durable_directory.rs  e2e_publish_checkpoint.rs  e2e_walog_append_then_complete.rs  fault_publish_checkpoint.rs  fault_publish_matrix.rs  prop_parser_robustness.rs  prop_publish_cadence_invariance.rs  prop_publish_lifecycle.rs  prop_recordlog_prefix.proptest-regressions  prop_recordlog_prefix.rs  prop_wal_resume.rs  prop_wal_resume_multiseg.rs  prop_wal_segmentation_invariance.rs  prop_walog_negative_corpus.rs  prop_walog_prefix.rs  soak_publish_truncate.rs
tests/support/: faulty_directory.rs  mod.rs
