[package]
name = "durability"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Persistence primitives for segment-based indices: directory, WAL, checkpoints, and formats."
repository = "https://github.com/arclabs561/durability"
documentation = "https://docs.rs/durability"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"

byteorder = "1.5"
crc32fast = "1.4"
postcard = { version = "1.0", features = ["use-crc", "alloc", "use-std"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.9.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_recordlog"
harness = false

[[bench]]
name = "bench_checkpoint"
harness = false

[[bench]]
name = "bench_walog"
harness = false

[[bench]]
name = "bench_recover"
harness = false

